base burger menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             <div class="branding">
                 <h1 class="slide-up">RENDERED</h1>
             </div>
-            <nav class="navbar-glass">
+
+            <button class="menu-toggle" id="menu-toggle">
+                <i class="bi bi-list"></i>
+            </button>
+
+            <nav class="navbar-glass" id="nav-menu">
                 <ul class="nav-links">
                     <li><a href="#inicio" class="nav-item">Inicio</a></li>
                     <li><a href="./pages/prices.html" class="nav-item">Precios</a></li>
@@ -26,6 +31,7 @@
             </nav>
         </div>
     </header>
+
 
     <main>
 
