--- a/pages/prices.html
+++ b/pages/prices.html
@@ -16,7 +16,12 @@
             <div class="branding">
                 <h1 class="slide-up">RENDERED</h1>
             </div>
-            <nav class="navbar-glass">
+            
+            <button class="menu-toggle" id="menu-toggle">
+                <i class="bi bi-list"></i>
+            </button>
+            
+            <nav class="navbar-glass" id="nav-menu">
                 <ul class="nav-links">
                     <li><a href="../index.html" class="nav-item">Inicio</a></li>
                     <li><a href="./prices.html" class="nav-item">Precios</a></li>
@@ -136,6 +141,8 @@
     <a href="#main-header" class="scroll-to-top" aria-label="Volver arriba">
         <i class="bi bi-arrow-up"></i>
     </a>
+
+    <script src="../assets/scripts/main.js"></script>
 
 </body>
 
