change p text on final section

--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
                     Te ofrecemos <b>reparaciones rápidas, garantía asegurada y precios accesibles</b>.
                 </p>
                 <a href="#contacto" class="cta-button">Contáctanos Ahora</a>
-                <p class="cta-note"><i class="bi bi-lightbulb-fill"></i> Atención personalizada y soporte a domicilio en
-                    tu ciudad.</p>
+                <p class="cta-note"><i class="bi bi-lightbulb-fill"></i> Atención personalizada y soporte a domicilio en Córdoba capital.</p>
             </div>
         </section>
 
